# CliR

./: .gitignore  LICENSE  README.md  build.py  build_.py  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: python-publish.yml
CliR/: __init__.py  __main__.py  chartools.py  colorer.py  tools.py
CliRenderer/: __init__.py  __main__.py  chartools.py  colorer.py  core.py  utils.py
clir_cpplib/: CMakeLists.txt
clir_cpplib/src/: charcolor.cc  main.cc  testmodule.cc
clirenderer/: __init__.py  __main__.py  chartools.py  colorer.py
ext/: CMakeLists.txt
ext/src/: charcolor.cc  main.cc  testmodule.cc
test/: init.py  main_test.py  test-speed.py  test.py
