[project]
name = "CliRenderer"
version = "0.1.6.post4"
requires-python = ">=3.9"
authors = [
    { name = "ultraflame4", email = "ultraflame4@gmail.com" }
]
description = "A CLI tool to render unicode art in the terminal"
readme = "README.md"
keywords = ["cli", "unicode", "art", "render", "terminal"]
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/ultraflame4/CliR"
"Bug Tracker" = "https://github.com/ultraflame4/CliR/issues"

[project.scripts]
clirender = "CliRenderer.__main__:main"

#[build-system]
#build-backend = "setuptools.build_meta"
#requires = ["setuptools", "wheel"]

[tool.setuptools]
packages = ["CliRenderer"]

[tool.poetry]
name = "CliRenderer"
version = "0.1.6"
description = ""
authors = ["ultr42 <ultraflame4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "~1.24.2"
Pillow = "~9.5.0"
rich = "~13.3.4"
typer = "~0.9.0"
imageio = "~2.27.0"
validators = "~0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
