[metadata]
name = CliRenderer
version = 0.1.0
author = ultraflame4
description = A CLI tool to render unicode art in the terminal
long_description = file: README.md
keywords = cli, unicode, art, render, terminal
license = MIT
license_file = LICENSE

[options]
packages = CliRenderer
install_requires=
    numpy~=1.24.2
    Pillow~=9.5.0
    rich~=13.3.4
    typer~=0.7.0

[options.entry_points]
console_scripts =
    clirender = CliRenderer.__main__:main
