[metadata]
name = CliRenderer
version = 0.1.5
author = ultraflame4
description = A CLI tool to render unicode art in the terminal
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cli, unicode, art, render, terminal
license = MIT
license_file = LICENSE
home_page = https://github.com/ultraflame4/CliR
[options]
packages = CliRenderer
install_requires=
    numpy~=1.24.2
    Pillow~=9.5.0
    rich~=13.3.4
    CliRenderer~=0.1.0
    typer~=0.7.0
    imageio~=2.27.0
    numba~=0.57.0


[options.entry_points]
console_scripts =
    clirender = CliRenderer.__main__:main
